changes for trainee to probi

--- a/application/resources/lang/de.json
+++ b/application/resources/lang/de.json
@@ -2,7 +2,7 @@
     "Dashboard": "Instrumententafel",
     "Employees": "Angestellte",
     "Regular": "Regulär",
-    "Trainee": "Auszubildender",
+    "Probitionary": "Auszubildender",
     "Attendances": "Anwesenheiten",
     "Online": "Online",
     "Offline": "Offline",
@@ -39,7 +39,7 @@
     "Mobile Number": "Handynummer",
     "Age": "Alter",
     "Date of Birth": "Geburtsdatum",
-    "National ID": "Personalausweis",
+    "Tin ID": "Personalausweis",
     "Place of Birth": "Geburtsort",
     "Home Address": "Heimatadresse",
     "Upload Profile photo": "Profilfoto hochladen",
