--- a/application/resources/lang/en.json
+++ b/application/resources/lang/en.json
@@ -2,7 +2,7 @@
     "Dashboard": "",
     "Employees": "",
     "Regular": "",
-    "Trainee": "",
+    "Probitionary": "",
     "Attendances": "",
     "Online": "",
     "Offline": "",
@@ -39,7 +39,7 @@
     "Mobile Number": "",
     "Age": "",
     "Date of Birth": "",
-    "National ID": "",
+    "Tin ID": "",
     "Place of Birth": "",
     "Home Address": "",
     "Upload Profile photo": "",
