--- a/application/resources/lang/es.json
+++ b/application/resources/lang/es.json
@@ -2,7 +2,7 @@
     "Dashboard": "Tablero",
     "Employees": "Empleados",
     "Regular": "Regular",
-    "Trainee": "Aprendiz",
+    "Probitionary": "Aprendiz",
     "Attendances": "Asistencia",
     "Online": "En línea",
     "Offline": "Desconectado",
@@ -39,7 +39,7 @@
     "Mobile Number": "Número de teléfono móvil",
     "Age": "Años",
     "Date of Birth": "Fecha de nacimiento",
-    "National ID": "Identificación nacional",
+    "Tin ID": "Identificación nacional",
     "Place of Birth": "Lugar de nacimiento",
     "Home Address": "Direccion de casa",
     "Upload Profile photo": "Subir foto de perfil",
