--- a/application/resources/lang/fr.json
+++ b/application/resources/lang/fr.json
@@ -2,7 +2,7 @@
     "Dashboard": "Tableau de bord",
     "Employees": "Des employés",
     "Regular": "Ordinaire",
-    "Trainee": "Stagiaire",
+    "Probitionary": "Stagiaire",
     "Attendances": "Les présences",
     "Online": "En ligne",
     "Offline": "Hors ligne",
@@ -39,7 +39,7 @@
     "Mobile Number": "Numéro de portable",
     "Age": "Âge",
     "Date of Birth": "Date de naissance",
-    "National ID": "carte d'identité",
+    "Tin ID": "carte d'identité",
     "Place of Birth": "Lieu de naissance",
     "Home Address": "Adresse du domicile",
     "Upload Profile photo": "Télécharger une photo de profil",
