--- a/application/resources/lang/in.json
+++ b/application/resources/lang/in.json
@@ -2,7 +2,7 @@
 	"Dashboard": "डैशबोर्ड",
 	"Employees": "कर्मचारियों",
 	"Regular": "नियमित",
-	"Trainee": "प्रशिक्षु",
+	"Probitionary": "प्रशिक्षु",
 	"Attendances": "उपस्थिति",
 	"Online": "ऑनलाइन",
 	"Offline": "ऑफलाइन",
@@ -39,7 +39,7 @@
 	"Mobile Number": "मोबाइल नंबर",
 	"Age": "आयु",
 	"Date of Birth": "जन्म की तारीख",
-	"National ID": "राष्ट्रीय पहचान पत्र",
+	"Tin ID": "राष्ट्रीय पहचान पत्र",
 	"Place of Birth": "जन्म स्थान",
 	"Home Address": "घर का पता",
 	"Upload Profile photo": "प्रोफ़ाइल फ़ोटो अपलोड करें",
