--- a/application/resources/lang/it.json
+++ b/application/resources/lang/it.json
@@ -2,7 +2,7 @@
 	"Dashboard": "Cruscotto",
 	"Employees": "I dipendenti",
 	"Regular": "Regolare",
-	"Trainee": "apprendista",
+	"Probitionary": "apprendista",
 	"Attendances": "presenze",
 	"Online": "in linea",
 	"Offline": "disconnesso",
@@ -39,7 +39,7 @@
 	"Mobile Number": "Numero di cellulare",
 	"Age": "Età",
 	"Date of Birth": "Data di nascita",
-	"National ID": "ID nazionale",
+	"Tin ID": "ID nazionale",
 	"Place of Birth": "Luogo di nascita",
 	"Home Address": "Indirizzo di casa",
 	"Upload Profile photo": "Carica la foto del profilo",
