--- a/application/resources/lang/jp.json
+++ b/application/resources/lang/jp.json
@@ -2,7 +2,7 @@
     "Dashboard": "ダッシュボード",
     "Employees": "従業員",
     "Regular": "レギュラー",
-    "Trainee": "研修生",
+    "Probitionary": "研修生",
     "Attendances": "出席者",
     "Online": "オンライン",
     "Offline": "オフライン",
@@ -39,7 +39,7 @@
     "Mobile Number": "携帯電話番号",
     "Age": "年齢",
     "Date of Birth": "生年月日",
-    "National ID": "国民ID",
+    "Tin ID": "国民ID",
     "Place of Birth": "出生地",
     "Home Address": "自宅住所",
     "Upload Profile photo": "プロフィール写真をアップロード",
