--- a/application/resources/lang/kr.json
+++ b/application/resources/lang/kr.json
@@ -2,7 +2,7 @@
 	"Dashboard": "계기반",
 	"Employees": "직원",
 	"Regular": "정규병",
-	"Trainee": "연습생",
+	"Probitionary": "연습생",
 	"Attendances": "출석",
 	"Online": "온라인",
 	"Offline": "오프라인",
@@ -39,7 +39,7 @@
 	"Mobile Number": "휴대 전화 번호",
 	"Age": "나이",
 	"Date of Birth": "생년월일",
-	"National ID": "국립 ID",
+	"Tin ID": "국립 ID",
 	"Place of Birth": "출생지",
 	"Home Address": "집 주소",
 	"Upload Profile photo": "프로필 사진 업로드",
