--- a/application/resources/lang/my.json
+++ b/application/resources/lang/my.json
@@ -2,7 +2,7 @@
 	"Dashboard": "Papan Pemuka",
 	"Employees": "Pekerja",
 	"Regular": "Biasa",
-	"Trainee": "Pelatih",
+	"Probitionary": "Pelatih",
 	"Attendances": "Kehadiran",
 	"Online": "Online",
 	"Offline": "Luar talian",
@@ -39,7 +39,7 @@
 	"Mobile Number": "Nombor telefon",
 	"Age": "Umur",
 	"Date of Birth": "Tarikh lahir",
-	"National ID": "ID kebangsaan",
+	"Tin ID": "ID kebangsaan",
 	"Place of Birth": "Tempat lahir",
 	"Home Address": "Alamat rumah",
 	"Upload Profile photo": "Muat naik foto Profil",
