--- a/application/resources/lang/nl.json
+++ b/application/resources/lang/nl.json
@@ -2,7 +2,7 @@
 	"Dashboard": "Dashboard",
 	"Employees": "werknemers",
 	"Regular": "regelmatig",
-	"Trainee": "stagiair",
+	"Probitionary": "stagiair",
 	"Attendances": "opkomst",
 	"Online": "Online",
 	"Offline": "offline",
@@ -39,7 +39,7 @@
 	"Mobile Number": "Mobiele nummer",
 	"Age": "Leeftijd",
 	"Date of Birth": "Geboortedatum",
-	"National ID": "Nationaal ID",
+	"Tin ID": "Nationaal ID",
 	"Place of Birth": "Geboorteplaats",
 	"Home Address": "Thuisadres",
 	"Upload Profile photo": "Profielfoto uploaden",
