--- a/application/resources/lang/ph.json
+++ b/application/resources/lang/ph.json
@@ -2,7 +2,7 @@
 	"Dashboard": "Dashboard",
 	"Employees": "Mga empleyado",
 	"Regular": "Regular",
-	"Trainee": "Trainee",
+	"Probitionary": "Probitionary",
 	"Attendances": "Pagdalo",
 	"Online": "Online",
 	"Offline": "Offline",
@@ -39,7 +39,7 @@
 	"Mobile Number": "Numero ng Mobile",
 	"Age": "Edad",
 	"Date of Birth": "Araw ng kapanganakan",
-	"National ID": "Pambansang ID",
+	"Tin ID": "Pambansang ID",
 	"Place of Birth": "Lugar ng Kapanganakan",
 	"Home Address": "Tahanan ng Tahanan",
 	"Upload Profile photo": "Mag-upload ng larawan ng Profile",
