--- a/application/resources/lang/pt.json
+++ b/application/resources/lang/pt.json
@@ -2,7 +2,7 @@
 	"Dashboard": "painel de controle",
 	"Employees": "Funcionários",
 	"Regular": "Regular",
-	"Trainee": "Estagiário",
+	"Probitionary": "Estagiário",
 	"Attendances": "Presenças",
 	"Online": "Conectados",
 	"Offline": "desligada",
@@ -39,7 +39,7 @@
 	"Mobile Number": "Número de celular",
 	"Age": "Era",
 	"Date of Birth": "Data de nascimento",
-	"National ID": "identidade nacional",
+	"Tin ID": "identidade nacional",
 	"Place of Birth": "Naturalidade",
 	"Home Address": "Endereço residencial",
 	"Upload Profile photo": "Carregar foto do perfil",
